# semaforo_pico

./: .gitignore  CMakeLists.txt  README.md  pico_sdk_import.cmake
src/: main.c  one_shot.c  semaforo.c
wokwi/: projeto_wokwi.json
